name:           bitq
version:        0.1.0.0
build-type:     Simple
cabal-version:  >=1.10

executable ast-interpreter
  hs-source-dirs:   src
  main-is:          BitQueue/AstInterpreter.hs
  other-modules:    BitQueue.Parser
  default-language: Haskell2010
  extensions:       NamedFieldPuns, LambdaCase
  build-depends:    base == 4.*
                  , containers == 0.6.5.1
                  , parsec == 3.1.15.0
  ghc-options:      -Wall

executable bytecode-interpreter
  hs-source-dirs:   src
  main-is:          BitQueue/FastInterpreter.hs
  other-modules:    BitQueue.Parser
  default-language: Haskell2010
  extensions:       ViewPatterns, LambdaCase
  build-depends:    base == 4.*
                  , containers == 0.6.5.1
                  , parsec == 3.1.15.0
                  , mtl == 2.2.2
                  , vector == 0.12.3.1
  ghc-options:      -Wall
